fix date picker input z-index issue

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -147,7 +147,6 @@ a.franchisor-navlink {
 /* Datepicker */
 .datepicker {
   padding: .5rem .75rem;
-  z-index: 10000 !important;
 }
 
 /* Signature */
